[package]
name = "indxvec"
version = "1.1.4"
authors = ["Libor Spacek"]
edition = "2021"
description = """Efficiently sorting, merging, ranking, searching, reversing, intersecting, etc."""
readme = "README.md"
homepage = "https://github.com/liborty/indxvec"
repository = "https://github.com/liborty/indxvec"
license = "Apache-2.0"
keywords = ["merge-sort","set-operations","ranking-searching","printing-vectors","generic"]
categories = ["algorithms","data-structures","mathematics","rust-patterns","simulation"]
include = [
    "src/*.rs",
    "tests/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dev-dependencies]
ran = "^0.2"
