[package]
name = "indxvec"
version = "1.4.9"
authors = ["Libor Spacek"]
edition = "2021"
description = "Vecs sorting, merging, indexing, ranking, searching, reversing, intersecting, printing, etc."
readme = "README.md"
homepage = "https://github.com/liborty/indxvec"
repository = "https://github.com/liborty/indxvec"
license = "Apache-2.0"
keywords = ["merge-sort","hash-sort","set-operations","ranking-searching","printing-vectors"]
categories = ["algorithms","data-structures","mathematics","rust-patterns","simulation"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md", 
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dev-dependencies]
ran = "1.0"
times = "1.0"
