[package]
name = "indxvec"
version = "1.8.3"
authors = ["Libor Spacek"]
edition = "2021"
description = "Vecs sorting, merging, indexing, ranking, searching, reversing, intersecting, printing, etc."
readme = "README.md"
homepage = "https://github.com/liborty/indxvec"
repository = "https://github.com/liborty/indxvec"
license = "Apache-2.0"
keywords = ["merge-sort","hash-sort","binary-search","ranking","printing-vectors"]
categories = ["algorithms","data-structures","mathematics","rust-patterns","simulation"]
include = [
    "src/lib.rs",
    "src/indices.rs",
    "src/mutops.rs",
    "src/printing.rs",
    "src/search.rs",
    "src/vecops.rs",
    "Cargo.toml",
    "README.md", 
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dev-dependencies]
ran = "1.1"
times = "1.0"
